loadbalancer3.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-lb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  loadBalancerIP: 172.171.35.254  # Dirección IP estática asignada
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
